# datrina

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: CAO_AUTOPILOT.md  DECISIONS.md  RECONCILIATION_PLAN.md  RESIDUAL_BACKLOG.md  W10_END_TO_END_PRODUCT_RUNTIME.md  W11_OPENER_PLUGIN_MIGRATION.md  W12_PROVIDER_DRIVEN_AGENTIC_DASHBOARD_BUILDER.md  W13_DURABLE_REAL_RUNTIME_PIPELINE.md  W14_CHAT_STREAMING_TRACE_UI.md  W15_CHAT_RUNTIME_REPLACEMENT.md  W16_PROPOSAL_VALIDATION_GATE.md  W17_AGENT_MEMORY_RAG.md  W18_PLAN_EXECUTE_REFLECT.md  W19_DASHBOARD_VERSIONS_UNDO.md  W1_BUILD_BASELINE.md  W20_DATA_PLAYGROUND_TEMPLATES.md  W21_ALERTS_AUTONOMOUS_TRIGGERS.md  W22_TOKEN_COST_TRACKING.md  W23_PIPELINE_DEBUG_VIEW.md  W24_AGENT_EVAL_SUITE.md  W25_DASHBOARD_PARAMETERS.md  W26_CAO_AUTOPILOT_E2E.md  W27_CYBERPUNK_REDESIGN.md  W28_CHAT_UX_HARDENING.md  W29_REAL_PROVIDER_RUNTIME_GATE.md  W2_CONTRACT_BASELINE.md  W30_DATASOURCE_PIPELINE_WORKBENCH.md  W31_DATASOURCE_IDENTITY_BINDING_PROVENANCE.md  W32_TYPED_PIPELINE_STUDIO.md  W3_STORAGE_BASELINE.md  (+24 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: alert.rs  chat.rs  config.rs  cost.rs  dashboard.rs  datasource.rs  debug.rs  external_source.rs  language.rs  mcp.rs  memory.rs  mod.rs  playground.rs  provenance.rs  provider.rs  system.rs  tool.rs  validation.rs  workflow.rs
src-tauri/src/models/: alert.rs  chat.rs  dashboard.rs  datasource.rs  external_source.rs  language.rs  mcp.rs  memory.rs  mod.rs  pipeline.rs  playground.rs  pricing.rs  provenance.rs  provider.rs  snapshot.rs  validation.rs  widget.rs  widget_stream.rs  workflow.rs
src-tauri/src/modules/: ai.rs  alert_engine.rs  context_budget.rs  context_compressor.rs  datasource_signature.rs  external_source_catalog.rs  mcp_manager.rs  memory.rs  mod.rs  parameter_engine.rs  parameter_options.rs  scheduler.rs  storage.rs  tool_engine.rs  workflow_engine.rs
src-tauri/tests/: agent_eval.rs
src-tauri/tests/fixtures/agent_evals/: bad_pipeline_fails_validator.yaml  crypto_top10_table.yaml  layout_explicit_coordinates_rejected.yaml  layout_size_preset_passes.yaml  looping_tool_call.yaml  recorded_replay_full_loop.yaml  release_status_single_stat.yaml  system_monitor_grouped.yaml  text_widget_no_json_dump.yaml  w48_silent_drop_fails_validator.yaml  w48_weather_compose_covers_mentions.yaml
(+56 files in other folders)
