[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Datrina The Lenswright Team"]
license = "FSL-1.1"
repository = "https://github.com/yourusername/datrina"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
