[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Privalov <n5250@yandex.com>"]
license = "MIT"
repository = "https://github.com/yourusername/datrina"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
